ops/arm/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminPassword": {
            "defaultValue": "DevOps-admin",
            "type": "SecureString"
        },
        "availabilitySets_availability_iis_name": {
            "defaultValue": "availability-iis",
            "type": "String"
        },
        "virtualMachines_iis_server_name": {
            "defaultValue": "iis-server",
            "type": "String"
        },
        "virtualMachines_sql_server_name": {
            "defaultValue": "sql-server",
            "type": "String"
        },
        "loadBalancers_loadbalancer_name": {
            "defaultValue": "loadbalancer",
            "type": "String"
        },
        "networkInterfaces_iis_server79_name": {
            "defaultValue": "iis-server79",
            "type": "String"
        },
        "networkInterfaces_sql_server679_name": {
            "defaultValue": "sql-server679",
            "type": "String"
        },
        "networkSecurityGroups_iis_server_secure_name": {
            "defaultValue": "iis-server-secure",
            "type": "String"
        },
        "networkSecurityGroups_sql_server_name": {
            "defaultValue": "sql-server",
            "type": "String"
        },
        "publicIPAddresses_iis_server_name": {
            "defaultValue": "iis-server",
            "type": "String"
        },
        "publicIPAddresses_loadbalancer_name": {
            "defaultValue": "loadbalancer",
            "type": "String"
        },
        "publicIPAddresses_sql_server_name": {
            "defaultValue": "sql-server",
            "type": "String"
        },
        "virtualNetworks_private_network_name": {
            "defaultValue": "private-network",
            "type": "String"
        },
        "storageAccounts_exportbase4018_name": {
            "defaultValue": "exportbase4018",
            "type": "String"
        },
        "loadBalancers_loadbalancer_id": {
            "defaultValue": "/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/loadBalancers/loadbalancer/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_loadbalancer_id_1": {
            "defaultValue": "/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/loadBalancers/loadbalancer/backendAddressPools/backend-pool",
            "type": "String"
        },
        "networkInterfaces_iis_server79_id": {
            "defaultValue": "/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkInterfaces/iis-server79/ipConfigurations/ipconfig1",
            "type": "String"
        },
        "networkInterfaces_sql_server679_id": {
            "defaultValue": "/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkInterfaces/sql-server679/ipConfigurations/ipconfig1",
            "type": "String"
        },
        "networkSecurityGroups_iis_server_secure_id": {
            "defaultValue": "/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkSecurityGroups/iis-server-secure/securityRules/default-allow-http",
            "type": "String"
        },
        "networkSecurityGroups_iis_server_secure_id_1": {
            "defaultValue": "/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkSecurityGroups/iis-server-secure/securityRules/default-allow-rdp",
            "type": "String"
        },
        "networkSecurityGroups_sql_server_id": {
            "defaultValue": "/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkSecurityGroups/sql-server/securityRules/default-allow-sql",
            "type": "String"
        },
        "networkSecurityGroups_sql_server_id_1": {
            "defaultValue": "/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkSecurityGroups/sql-server/securityRules/default-allow-rdp",
            "type": "String"
        },
        "virtualNetworks_private_network_id": {
            "defaultValue": "/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/virtualNetworks/private-network/subnets/develop-front",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Compute/availabilitySets/availability-iis' から一般化されました。",
            "type": "Microsoft.Compute/availabilitySets",
            "name": "[parameters('availabilitySets_availability_iis_name')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 3
            },
            "dependsOn": []
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Compute/virtualMachines/iis-server' から一般化されました。",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_iis_server_name')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_availability_iis_name'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_DS2_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('virtualMachines_iis_server_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_exportbase4018_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_iis_server_name'),'20165129558.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_iis_server_name')]",
                    "adminUsername": "DevOps-admin",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_iis_server79_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_availability_iis_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_exportbase4018_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_iis_server79_name'))]"
            ]
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Compute/virtualMachines/sql-server' から一般化されました。",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_sql_server_name')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS11_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftSQLServer",
                        "offer": "SQL2016-WS2012R2",
                        "sku": "Enterprise",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('virtualMachines_sql_server_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccounts_exportbase4018_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_sql_server_name'),'201651210629.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "[concat(parameters('virtualMachines_sql_server_name'),'-disk-1')]",
                            "createOption": "Empty",
                            "vhd": {
                                "uri": "[concat('https', '://', parameters('storageAccounts_exportbase4018_name'), '.blob.core.windows.net', concat('/vhds/', parameters('virtualMachines_sql_server_name'),'-disk-1-201651210629.vhd'))]"
                            },
                            "caching": "ReadOnly",
                            "diskSizeGB": 1023
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_sql_server_name')]",
                    "adminUsername": "DevOps-admin",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_sql_server679_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_exportbase4018_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_sql_server679_name'))]"
            ]
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/loadBalancers/loadbalancer' から一般化されました。",
            "type": "Microsoft.Network/loadBalancers",
            "name": "[parameters('loadBalancers_loadbalancer_name')]",
            "apiVersion": "2016-03-30",
            "location": "japanwest",
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "[concat(parameters('loadBalancers_loadbalancer_name'),'LoadBalancerFrontEnd')]",
                        "id": "[parameters('loadBalancers_loadbalancer_id')]",
                        "etag": "W/\"589af38f-a1c8-4ec2-b536-8660fe796978\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_loadbalancer_name'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "backend-pool",
                        "id": "[parameters('loadBalancers_loadbalancer_id_1')]",
                        "etag": "W/\"589af38f-a1c8-4ec2-b536-8660fe796978\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "backendIPConfigurations": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_iis_server79_name')), '/ipConfigurations/ipconfig1')]"
                                }
                            ]
                        }
                    }
                ],
                "loadBalancingRules": [],
                "probes": [],
                "inboundNatRules": [],
                "outboundNatRules": [],
                "inboundNatPools": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_loadbalancer_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_iis_server79_name'))]"
            ]
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkInterfaces/iis-server79' から一般化されました。",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_iis_server79_name')]",
            "apiVersion": "2016-03-30",
            "location": "japanwest",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "id": "[parameters('networkInterfaces_iis_server79_id')]",
                        "etag": "W/\"b8b35ca8-6428-439c-b1cc-ccfc6109f3d0\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "192.169.201.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_iis_server_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_private_network_name')), '/subnets/develop-front')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "n4y0mbbj1gqetjxmr4af3ukagc.mx.internal.cloudapp.net"
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_iis_server_secure_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_iis_server_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_private_network_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_iis_server_secure_name'))]"
            ]
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkInterfaces/sql-server679' から一般化されました。",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_sql_server679_name')]",
            "apiVersion": "2016-03-30",
            "location": "japanwest",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "id": "[parameters('networkInterfaces_sql_server679_id')]",
                        "etag": "W/\"4c01dabf-1b25-444c-bdac-6e1d33ce6c6e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "192.169.201.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_sql_server_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_private_network_name')), '/subnets/develop-front')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "n4y0mbbj1gqetjxmr4af3ukagc.mx.internal.cloudapp.net"
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_sql_server_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_sql_server_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_private_network_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_sql_server_name'))]"
            ]
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkSecurityGroups/iis-server-secure' から一般化されました。",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_iis_server_secure_name')]",
            "apiVersion": "2016-03-30",
            "location": "japanwest",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-http",
                        "id": "[parameters('networkSecurityGroups_iis_server_secure_id')]",
                        "etag": "W/\"5749a47f-e68d-4fac-8fb6-37ee9941af4e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-allow-rdp",
                        "id": "[parameters('networkSecurityGroups_iis_server_secure_id_1')]",
                        "etag": "W/\"5749a47f-e68d-4fac-8fb6-37ee9941af4e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/networkSecurityGroups/sql-server' から一般化されました。",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_sql_server_name')]",
            "apiVersion": "2016-03-30",
            "location": "japanwest",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-sql",
                        "id": "[parameters('networkSecurityGroups_sql_server_id')]",
                        "etag": "W/\"c1b60994-649d-4b2e-b6d1-ac0af695718e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433-1434",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-allow-rdp",
                        "id": "[parameters('networkSecurityGroups_sql_server_id_1')]",
                        "etag": "W/\"c1b60994-649d-4b2e-b6d1-ac0af695718e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/publicIPAddresses/iis-server' から一般化されました。",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_iis_server_name')]",
            "apiVersion": "2016-03-30",
            "location": "japanwest",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/publicIPAddresses/loadbalancer' から一般化されました。",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_loadbalancer_name')]",
            "apiVersion": "2016-03-30",
            "location": "japanwest",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/publicIPAddresses/sql-server' から一般化されました。",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_sql_server_name')]",
            "apiVersion": "2016-03-30",
            "location": "japanwest",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Network/virtualNetworks/private-network' から一般化されました。",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_private_network_name')]",
            "apiVersion": "2016-03-30",
            "location": "japanwest",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "192.169.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "develop-front",
                        "id": "[parameters('virtualNetworks_private_network_id')]",
                        "etag": "W/\"aa89a33e-f4d9-467c-9f8f-4382d475bdf2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "192.169.201.0/24",
                            "ipConfigurations": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_iis_server79_name')), '/ipConfigurations/ipconfig1')]"
                                },
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_sql_server679_name')), '/ipConfigurations/ipconfig1')]"
                                }
                            ]
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "リソース '/subscriptions/38daead8-5787-4634-b02b-219d6347ab74/resourceGroups/export-base/providers/Microsoft.Storage/storageAccounts/exportbase4018' から一般化されました。",
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[parameters('storageAccounts_exportbase4018_name')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "tags": {},
            "properties": {
                "accountType": "Premium_LRS"
            },
            "dependsOn": []
        }
    ]
}
